--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
-    "routr": "^3.0.1"
+    "routr": "^3.0.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
