--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "routr": "^3.0.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stats.js": "^0.17.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
